--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp build",
+    "build": "gulp docs",
     "start": "gulp",
     "images": "gulp optimizeImages",
     "styles": "gulp styles"
